# quality

./: .env  Cargo.toml  Jenkinsfile  build.rs  clients.db  pom.xml  sonar-project.properties
.github/workflows/: build.yml
src/: audio.rs  audio_engine.rs  combustion_event.rs  db.rs  engine_sim.rs  handlers.rs  main.rs  models.rs  schema.rs  waveguide.rs
src/main/java/com/example/quality/: QualityApplication.java
src/main/java/com/example/quality/controller/: ClientController.java
src/main/java/com/example/quality/dto/: NewClient.java
src/main/java/com/example/quality/model/: Client.java
src/main/java/com/example/quality/repository/: ClientRepository.java
src/main/resources/: application.properties
src/main/resources/templates/: form.html  index.html
src/test/java/com/example/quality/: ClientControllerTest.java  ClientRepositoryTest.java  ClientTest.java  NewClientValidationTest.java
static/: index.html
templates/: base.html  form.html  index.html
