[package]
name = "quality"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
diesel = { version = "2.2", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
libsqlite3-sys = { version = "0.28", features = ["bundled"] }

[dependencies.uuid]
version = "1.10"
features = ["v4", "serde"]