[package]
name = "quality"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
askama = "0.14.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
actix-files = "0.6"
actix-multipart = "0.7.2"
actix-rt = "2"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }